<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        app:cardElevation="4dp"
        app:cardCornerRadius="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottomsheet"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="?attr/colorOnSurface"
                android:text="@string/biography"
                android:fontFamily="@font/iransans_medium"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="center_vertical"/>

            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                app:layout_constraintTop_toBottomOf="@id/toolbar"
                android:background="@color/gray_200" />


            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none"
                android:theme="@style/DefaultRecyclerViewStyle"
                app:layout_constraintTop_toBottomOf="@id/toolbar"
                android:paddingBottom="48dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/story"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginTop="16dp"
                        tools:text="داستان" />
                    <Button
                        android:id="@+id/more_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:theme="@style/Theme.MyApp"
                        android:layout_marginStart="8dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/more_info"
                        app:icon="@drawable/ic_baseline_open_in_new_24"/>

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.core.widget.NestedScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>