...

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@null"
                    android:minWidth="0dp"
                    android:elevation="4dp"
                    app:layout_constraintTop_toTopOf="@id/view"
...
