...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:transitionGroup="true"
        android:layoutDirection="rtl">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
...
            android:onClick="@{() -> viewModel.reportEvent(Destinations.SEARCH)}">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageButton
                    android:id="@+id/hamburger"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="start|center_vertical"
                    android:background="@android:color/transparent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:srcCompat="@drawable/ic_baseline_dehaze_24"
...
